name:          hemokit
version:       0.3.0
license:       MIT
copyright:     2013 Niklas Hambüchen <mail@nh2.me>
author:        Niklas Hambüchen <mail@nh2.me>
maintainer:    Niklas Hambüchen <mail@nh2.me>
category:      Bioinformatics
build-type:    Simple
stability:     experimental
tested-With:   GHC==7.4.2
cabal-version: >= 1.10
homepage:      https://github.com/nh2/haskell-hemokit
bug-Reports:   https://github.com/nh2/haskell-hemokit/issues
synopsis:      Haskell port of the Emokit EEG project
description:
  This package allows reading raw data from the Emotiv EEG devices.


source-repository head
  type:      git
  location:  git://github.com/nh2/haskell-hemokit.git


library
  exposed-modules:
    Hemokit
  build-depends:
      base              >= 4 && < 5
    , bytestring        >= 0.9.2.1
    , cipher-aes        >= 0.1.7
    , deepseq-generics  >= 0.1
    , hidapi            >= 1.0
    , vector            >= 0.9
    , deepseq           >= 1.2
  hs-source-dirs:
    src
  default-language: Haskell2010
  ghc-options: -Wall


executable hemokit-mouse
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    Mouse.hs
  build-depends:
      base
    , hemokit
    , pretty-show       >= 1.0
    , robot             >= 1.0.1.1
    , xhb               >= 0.5.2012.11.23
  ghc-options: -Wall


executable hemokit-dump
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    Dump.hs
  build-depends:
      base
    , hemokit
    , pretty-show       >= 1.0
  ghc-options: -Wall


executable hemokit-fft
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    FFT.hs
  build-depends:
      base
    , hemokit
    , conduit
    , mtl               >= 2.1.2
    , pretty-show       >= 1.0
    , vector            >= 0.9
    , vector-fftw       >= 0.1.3.1
  ghc-options: -Wall


executable hemokit-headmap
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    Headmap.hs
  build-depends:
      base
    , hemokit
    , cairo             >= 0.12.4
    , gtk               >= 0.12.4
    , mtl               >= 2.1.2
    , pretty-show       >= 1.0
    , svgcairo          >= 0.12.1.1
    , vector            >= 0.9
  ghc-options: -Wall


test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Tests.hs
  build-depends:
      base
    , hemokit
    , bytestring
    , hspec              >= 1.3.0.1
    , HUnit              >= 1.2
    , vector             >= 0.9
  ghc-options: -Wall


benchmark bench
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Bench.hs
  build-depends:
      base
    , hemokit
    , criterion          >= 0.8.0.0
  ghc-options: -Wall
